添加后台代码

--- a/ace-modules/ace-generator/src/main/resources/generator.properties
+++ b/ace-modules/ace-generator/src/main/resources/generator.properties
@@ -1,17 +1,17 @@
-#代码生成器，配置信息
+#\u4EE3\u7801\u751F\u6210\u5668\uFF0C\u914D\u7F6E\u4FE1\u606F
 
-#包名
-package=com.github.wxiaoqi.security.auth
-#作者
-author=Mr.AG
+#\u5305\u540D
+package=com.github.wxiaoqi.security.admin
+#\u4F5C\u8005
+author=Mr.jjy
 #Email
-email=463540703@qq.com
-#表前错误的Unicode字符串!
+email=735310866@qq.com
+#\u8868\u524D\u9519\u8BEF\u7684Unicode\u5B57\u7B26\u4E32!
 tablePrefix=gate_
-#前端模块前缀
-mainModule=auth
+#\u524D\u7AEF\u6A21\u5757\u524D\u7F00
+mainModule=admin
 
-#类型转换，配置信息
+#\u7C7B\u578B\u8F6C\u6362\uFF0C\u914D\u7F6E\u4FE1\u606F
 tinyint=Integer
 smallint=Integer
 mediumint=Integer
