--- a/ace-auth/ace-auth-server/src/main/resources/application.yml
+++ b/ace-auth/ace-auth-server/src/main/resources/application.yml
@@ -13,9 +13,9 @@ spring:
         max-active: 20
     datasource:
       name: test
-      url: jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/ag_auth_v1?useUnicode=true&characterEncoding=UTF8
+      url: jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/chengqi?useUnicode=true&characterEncoding=UTF8
       username: root
-      password: 123456
+      password: root
       # 使用druid数据源
       type: com.alibaba.druid.pool.DruidDataSource
       driver-class-name: com.mysql.jdbc.Driver
