--- a/ace-auth/ace-auth-server/src/main/resources/application.yml
+++ b/ace-auth/ace-auth-server/src/main/resources/application.yml
@@ -7,15 +7,15 @@ spring:
         default-property-inclusion: non_null
     redis:
         database: 1
-        host: ${REDIS_HOST:localhost}
+        host: ${REDIS_HOST:192.168.100.100}
         port: ${REDIS_PORT:6379}
         pool:
         max-active: 20
     datasource:
       name: test
-      url: jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/chengqi?useUnicode=true&characterEncoding=UTF8
+      url: jdbc:mysql://${MYSQL_HOST:192.168.100.100}:${MYSQL_PORT:3306}/chengqi?useUnicode=true&characterEncoding=UTF8
       username: root
-      password: root
+      password: pz1234
       # 使用druid数据源
       type: com.alibaba.druid.pool.DruidDataSource
       driver-class-name: com.mysql.jdbc.Driver
@@ -33,10 +33,10 @@ spring:
       poolPreparedStatements: true
       maxOpenPreparedStatements: 20
     rabbitmq:
-      host: ${RABBIT_MQ_HOST:localhost}
-      port:  ${RABBIT_MQ_PORT:5672}
-      username: guest
-      password: guest
+      host: ${RABBIT_MQ_HOST:192.168.100.100}
+      port: ${RABBIT_MQ_PORT:5672}
+      username: pzzhao
+      password: pzzhao
     sleuth:
       enabled: true
       http:
