--- a/ace-gate/ace-gate-zuul/src/main/resources/application.yml
+++ b/ace-gate/ace-gate-zuul/src/main/resources/application.yml
@@ -10,15 +10,15 @@ spring:
         default-property-inclusion: non_null
     redis:
         database: 1
-        host: 127.0.0.1
+        host: 192.168.100.100
         jedis:
           pool:
               max-active: 20
     rabbitmq:
-        host: ${RABBIT_MQ_HOST:localhost}
+        host: ${RABBIT_MQ_HOST:192.168.100.100}
         port:  ${RABBIT_MQ_PORT:5672}
-        username: guest
-        password: guest
+        username: pzzhao
+        password: pzzhao
     sleuth:
       enabled: true
       http:
