--- a/ace-modules/ace-admin/src/main/resources/application.yml
+++ b/ace-modules/ace-admin/src/main/resources/application.yml
@@ -11,9 +11,9 @@ spring:
         default-property-inclusion: non_null
     datasource:
         name: test
-        url: jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/chengqi?useUnicode=true&characterEncoding=UTF8
+        url: jdbc:mysql://${MYSQL_HOST:192.168.100.100}:${MYSQL_PORT:3306}/chengqi?useUnicode=true&characterEncoding=UTF8
         username: root
-        password: root
+        password: pz1234
         # 使用druid数据源
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
@@ -31,10 +31,10 @@ spring:
         poolPreparedStatements: true
         maxOpenPreparedStatements: 20
     rabbitmq:
-        host: ${RABBIT_MQ_HOST:localhost}
+        host: ${RABBIT_MQ_HOST:192.168.100.100}
         port:  ${RABBIT_MQ_PORT:5672}
-        username: guest
-        password: guest
+        username: pzzhao
+        password: pzzhao
     sleuth:
       enabled: true
       http:
@@ -121,7 +121,7 @@ redis:
          maxActive: 300
          maxIdle: 100
          maxWait: 1000
-    host: ${REDIS_HOST:localhost}
+    host: ${REDIS_HOST:192.168.100.100}
     port:  ${REDIS_PORT:6379}
     password:
     timeout: 2000
