--- a/ace-modules/ace-generator/src/main/resources/application.yml
+++ b/ace-modules/ace-generator/src/main/resources/application.yml
@@ -10,9 +10,9 @@ spring:
     datasource:
         type: com.alibaba.druid.pool.DruidDataSource
         driverClassName: com.mysql.jdbc.Driver
-        url: jdbc:mysql://localhost:3306/chengqi?useUnicode=true&characterEncoding=UTF-8
+        url: jdbc:mysql://192.168.100.100:3306/chengqi?useUnicode=true&characterEncoding=UTF-8
         username: root
-        password: root
+        password: pz1234
     jackson:
         time-zone: GMT+8
         date-format: yyyy-MM-dd HH:mm:ss
